simple/test/features/errors/semantic/e1023_invalid_struct_literal.spl
# E1023: Invalid Struct Literal

Feature: E1023 - Invalid Struct Literal Syntax
  As a Simple compiler
  I want to detect invalid struct literal syntax
  So that struct construction uses valid syntax

  Background:
    Given I have the Simple compiler

  Scenario: Missing field separator
    When I compile:
      '''
      struct Point:
        x: i32
        y: i32

      val p = Point { x: 10 y: 20 }  # Error: missing comma
      '''
    Then I should see error E1023 at line 5
    And the error message should be "invalid struct literal syntax"
    And the label should indicate "invalid struct literal"
    And the help should suggest "check the struct constructor syntax"

  Scenario: Invalid field syntax
    When I compile:
      '''
      struct Point:
        x: i32
        y: i32

      val p = Point { x = 10, y = 20 }  # Error: = instead of :
      '''
    Then I should see error E1023

  Scenario: Duplicate field in literal
    When I compile:
      '''
      struct Point:
        x: i32
        y: i32

      val p = Point { x: 10, x: 20, y: 30 }  # Error: x specified twice
      '''
    Then I should see error E1023 or E1008

  Scenario: Valid struct literal
    When I compile:
      '''
      struct Point:
        x: i32
        y: i32

      val p = Point { x: 10, y: 20 }
      '''
    Then compilation should succeed

  Scenario: Valid shorthand field syntax
    When I compile:
      '''
      struct Point:
        x: i32
        y: i32

      fn create(x: i32, y: i32) -> Point:
        Point { x, y }  # Shorthand
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      struct Point:
        x: i32
        y: i32

      val p = Point { x: 10 y: 20 }
      '''
    Then I should see error E1023
    And the error message should contain "잘못된 구조체 리터럴"
